--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-<%= yield %>
+<div id='bar-container'>
+  <input type="text" id='term'>
+  <button id='search'>Search</button>
+  <section id='display'></section>
+</div>
 
 </body>
 </html>
