--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,11 @@
 </head>
 <body>
 
-<div id='bar-container'>
-  <input type="text" id='term'>
-  <button id='search'>Search</button>
+<div id='bars-container'>
+  <input type="text" id='near' placeholder='Starting Location'>
+  <input type="text" id='distance' placeholder='Max Distance'>
+  <input type="text" id='bar_price' placeholder='Bar Price'>
+  <button id='search'>Spin to Win</button>
   <section id='display'></section>
 </div>
 
