rendered results on page

--- a/app/assets/javascripts/templates/bar.hbs
+++ b/app/assets/javascripts/templates/bar.hbs
@@ -1,1 +1,5 @@
-<p>{{venue.name}}</p>
+<h2>{{venue.name}}</h2>
+<p>{{venue.rating}}</p>
+<p>{{venue.price.message}}</p>
+<p>{{venue.location.formattedAddress}}</p>
+<img src = "https://irs2.4sqi.net/img/general/300x300{{venue.photos.groups.0.items.0.suffix}}">
