--- a/app/assets/javascripts/templates/bar.hbs
+++ b/app/assets/javascripts/templates/bar.hbs
@@ -1,5 +1,15 @@
-<h2>{{venue.name}}</h2>
-<p>{{venue.rating}}</p>
-<p>{{venue.price.message}}</p>
-<p>{{venue.location.formattedAddress}}</p>
-<img src = "https://irs2.4sqi.net/img/general/300x300{{venue.photos.groups.0.items.0.suffix}}">
+<div class = "bar-box">
+  <h2>{{name}}</h2>
+  <p><em>Rating:</em> {{rating}}   <em>Price:</em> {{price}}</p>
+  <p>{{street}} - {{cross_street}}</p>
+  <p>{{city}}, {{state}}</p>
+  <button id='uber-estimate'>Uber Estimate</button><br>
+  <img src = "https://irs2.4sqi.net/img/general/300x300{{image}}">
+  <input type="hidden" id="start-lat" value= {{start_lat}}>
+  <input type="hidden" id="start-lng" value= {{start_lng}}>
+  <input type="hidden" id="end-lat" value= {{end_lat}}>
+  <input type="hidden" id="end-lng" value= {{end_lng}}>
+</div>
+
+
+
