--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,16 +20,18 @@
       <div class="form-container">
         <p class="prompt">Starting Location</p>
         <input class="input" type="text" id='near' placeholder='Enter Address'>
+        <p class="prompt">e.g.(San Francisco or New York, NY or<br> 10 21st St. New York, Ny)</p>
       </div>
 
       <div class="form-container">
         <p class="prompt">How Far Are You Willing to Go?</p>
-        <input class="input" type="text" id='distance' placeholder='Enter Miles'>
+        <input class="input" type="text" id='distance' placeholder='Enter Miles'><p class="prompt">Maximum<br>62 Miles</p>
       </div>
 
       <div class="form-container">
         <p class="prompt">How Much Money Do You Want to Spend?</p>
         <input class="input" type="text" id='bar_price' placeholder='Enter Numbers 1-4'>
+        <p class="prompt">On a Scale of 1-4 e.g.(1 or 3,4 or 1,2,3,4) <br>1 = Cheapest 4 = Most Expensive</p>
       </div>
       
       <button id='search'>Spin to Win</button>
@@ -48,5 +50,6 @@
 
 </div>
 <div id = 'map'></div>
+
 </body>
 </html>
