--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,8 @@
 
 @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
 
+
+
 #nav-bar{
   background-color:rgba(0,0,0,0.8);
   width:100%;
@@ -25,8 +27,8 @@
 }
 
 h1{
-  width:900px;
-  margin-left: 200px;
+  /*width:100%;*/
+  padding-left: 20%;
   font-family: 'Lato', sans-serif;
   font-weight: 100;
   font-size: 50px;
@@ -35,7 +37,7 @@ h1{
 }
 
 .bar-box {
-
+  margin-left:15%;
 }
 .uber-box{
   margin-top:20px;
@@ -60,6 +62,7 @@ h1{
 
 #uber-display{
   margin-top:150px;
+  text-align: center;
 }
 
 #bars-container{
@@ -84,12 +87,6 @@ input#bar_price{
   height: 25px;
 }
 
-#uber-display{
-
-  text-align: center;
-
-}
-
 #display{
   margin-left: 60px;
 }
@@ -101,14 +98,15 @@ input#bar_price{
 }
 
 #results{
-  width: 900px;
+  /*width: 900px;*/
+  width: 100%;
   margin: 150px auto;
 }
 
 img{
   margin-top:-200px;
   float:right;
-  margin-right: 60px;
+  margin-right: 20%;
   border: solid 1px white;
   border-radius: 7px;
 }
@@ -119,7 +117,8 @@ body {
   color: white;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
+  background-size: cover;
 }
 
 .form-container {
@@ -140,12 +139,18 @@ body {
 
 #input-container{
   text-align: center;
+  padding-left:10%;
+  padding-right:10%;
 }
 
 button#search{
 
   margin-top: 40px;
   margin-bottom:30px;
+}
+
+#map{
+  display:none;
 }
 
 button{
@@ -182,6 +187,46 @@ hr{
 #map{
   margin-top:100px;
   height: 600px;
-  width:100%;
+  width:110%;
   margin-bottom:-500px;
+}
+
+@media screen and (max-width:980px){
+  .form-container{
+    background-color: orange;
+    display:block;
+    width:100%;
+  }
+
+  #input-container{
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  img{
+    margin-top: 70px;
+    float:left;
+  }
+
+  .bar-box{
+    margin-left:29%;
+    width:302px;
+    text-align: center;
+  }
+
+  #uber-container{
+    margin-top:400px;
+    margin-left:6%;
+  }
+}
+
+@media screen and (max-width:880px){
+  .bar-box{
+    margin-left: 26%;
+  }
+
+  #uber-container{
+    margin-left:3%;
+  }
 }
