--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@
 
 h1{
   /*width:100%;*/
-  padding-left: 20%;
+  padding-left: 17%;
   font-family: 'Lato', sans-serif;
   font-weight: 100;
   font-size: 50px;
@@ -45,7 +45,7 @@ h1{
   padding-right: 35px;
   text-align: center;
   list-style-type: none;
-  width: 85px;
+  /*width: 85px;*/
   float:left;
   background-color:rgba(0,0,0,0.3);
 
@@ -63,6 +63,7 @@ h1{
 #uber-display{
   margin-top:150px;
   text-align: center;
+  margin-left: 30%;
 }
 
 #bars-container{
@@ -131,6 +132,12 @@ body {
 .prompt {
   width: 100%;
   margin-bottom: 5px; 
+  font-size: 18px;
+}
+
+.prompt2 {
+  color: #F5F4F4;
+  font-size: 12px;
 }
 
 .input {
